build_output_5.txt
    Checking bateriapan v0.1.0 (D:\Progra\Proyectos_personales\Bateria-al-100\src-tauri)
warning: unused import: `Manager`
 --> src\modules\tray.rs:4:5
  |
4 |     Manager, Runtime,
  |     ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
  --> src\lib.rs:15:40
   |
15 |             modules::tray::create_tray(app)?;
   |             -------------------------- ^^^ expected `&AppHandle<_>`, found `&mut App`
   |             |
   |             arguments to this function are incorrect
   |
   = note:      expected reference `&AppHandle<_>`
           found mutable reference `&mut tauri::App`
note: function defined here
  --> src\modules\tray.rs:7:8
   |
 7 | pub fn create_tray<R: Runtime>(app: &tauri::AppHandle<R>) -> tauri::Result<()> {
   |        ^^^^^^^^^^^             -------------------------

warning: unused variable: `tray`
  --> src\modules\tray.rs:30:30
   |
30 |         .on_tray_icon_event(|tray, event| {
   |                              ^^^^ help: if this is intentional, prefix it with an underscore: `_tray`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0308`.
warning: `bateriapan` (lib) generated 2 warnings
error: could not compile `bateriapan` (lib) due to 1 previous error; 2 warnings emitted
